--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Signin</title>
+    <title>{{_('Sign In')}}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <form class="form-signin" method="POST">
-        <h2 class="form-signin-heading">Sign in</h2>
+        <h2 class="form-signin-heading">{{_('Sign in')}}</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
@@ -31,7 +31,7 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">{{_('Sign in')}}</button>
         <a href="/">Back Home</a>
       </form>
     </div> <!-- /container -->
