--- a/templates/signup.html
+++ b/templates/signup.html
@@ -21,13 +21,14 @@
   <body>
     <div class="container">
       <form class="form-signin" method="POST">
+        {{message}}
         <h2 class="form-signin-heading">Sign Up</h2>
         <label for="inputName" class="sr-only">Name</label>
-        <input type="name" id="inputName" class="form-control" placeholder="Name" required autofocus>
+        <input type="name" id="inputName" name="inputName" class="form-control" placeholder="Name" required autofocus>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
+        <input type="email" id="inputEmail" name="inputEmail"class="form-control" placeholder="Email address" required>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
         <a href="/">Back Home</a>
       </form>
