--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="container">
-      <form class="form-signin" method="POST">
+      <form class="form-signin" method="POST" action="/login">
         {{message}}
         <h2 class="form-signin-heading">{{_('Sign in')}}</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
