--- a/templates/show.html
+++ b/templates/show.html
@@ -28,7 +28,7 @@
         <div class="header clearfix">
           <nav>
             <ul class="nav nav-pills pull-right">
-              <li role="presentation"><a href="#">Home</a></li>
+              <li role="presentation"><a href="/">Home</a></li>
               <li role="presentation" class="active"><a href="/show">Show</a></li>
               <li role="presentation"><a href="/raceday">Race Day</a></li>
               <li role="presentation"><a href="/logout">Logout</a></li>
