--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -30,7 +30,7 @@
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="#">Home</a></li>
             <li role="presentation"><a href="/show">Show</a></li>
-            <li role="presentation"><a href="/raceday">Race Day</a></li>
+            <li role="presentation"><a href="/racedaycourse">Race Day</a></li>
             <li role="presentation"><a href="/logout">Logout</a></li>
           </ul>
         </nav>
