--- a/templates/racedaycourse.html
+++ b/templates/racedaycourse.html
@@ -28,9 +28,9 @@
         <div class="header clearfix">
           <nav>
             <ul class="nav nav-pills pull-right">
-              <li role="presentation"><a href="/home">Home</a></li>
+              <li role="presentation"><a href="/">Home</a></li>
               <li role="presentation"><a href="/show">Show</a></li>
-              <li role="presentation" class="active"><a href="/raceday">Race Day</a></li>
+              <li role="presentation" class="active"><a href="/racedaycourse">Race Day</a></li>
               <li role="presentation"><a href="/logout">Logout</a></li>
             </ul>
           </nav>
