Updated jquery link to https

--- a/templates/racedaycourse.html
+++ b/templates/racedaycourse.html
@@ -76,7 +76,7 @@
       </footer>
 
     </div> <!-- /container -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript">
     $('form').submit(function() { // catch the form's submit even
       var form = $(this);
