--- a/templates/racedaycourse.html
+++ b/templates/racedaycourse.html
@@ -13,6 +13,7 @@
   <!-- Bootstrap core CSS -->
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/custom.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -77,32 +78,30 @@
 
     </div> <!-- /container -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.js"></script>
     <script type="text/javascript">
-    $('form').submit(function() { // catch the form's submit even
-      var form = $(this);
-      var form_data = '';
-      $(form).find('input:radio').each(function () {
-       if ($(this).prop('checked')){
-        form_data += $(this).attr('name').substring(5)+" " +$(this).val()+ " ";
-      };
-    });
-      var confirm_box = confirm("Are you sure you want to submit this data: "+ form_data);
-      if (confirm_box == true){
-        $.ajax({ // create an AJAX call...
+      $('form').submit(function() {
+        var form = $(this);
+        var form_data = '';
+        $(form).find('input:radio').each(function () {
+         if ($(this).prop('checked')){
+          form_data += "<br><strong>"+$(this).attr('name').substring(5)+"</strong>: " +$(this).val();
+        };
+      });
+        swal({   title: "Are you sure?",   text: "Do you want to submit this selection: " + form_data, html: true,  type: "info",   showCancelButton: true,   confirmButtonColor: "green",   confirmButtonText: "Submit!",   closeOnConfirm: false }, function(){  $.ajax({
 
-       data: $(this).serialize(), // get the form data
-       type: $(this).attr('method'), // GET or POST
-       url: $(this).attr('action'), // the file to call
-       success: function(response) { // on success..
-         alert('saved');
-       }, 
-       error: function (xhr, status) {  
-        alert('Unknown error ' + status); 
-      } 
-    });
-      }
-   return false; // cancel original event to prevent form submitting
- }); 
+         data: form.serialize(),
+         type: 'POST',
+         url: '/updateselection',
+         success: function(response) {
+          swal('Saved!','Your selection has been updated!', 'success');
+         }, 
+         error: function (xhr, status) {  
+          swal('Error', 'Unknown error' + status, 'error'); 
+        } 
+      });  });
+        return false;
+      }); 
     </script>
 
   </body>
