--- a/templates/racedaycourse.html
+++ b/templates/racedaycourse.html
@@ -14,6 +14,7 @@
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/custom.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/css/bootstrap-datepicker.min.css">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,6 +39,12 @@
         </div>
 
         <h1>Welcome {{user.Name}}</h1>
+
+        <form method="POST" action="/racedaycourse" id="date_form">
+          <label for="date">Pick a date</label>
+          <input type="text" name="date" id="date" value="{{current_date}}" required/>
+          <button type="submit">Change date</button>
+        </form>
 
         <div class="container-fluid">
           <div class="row">
@@ -79,8 +86,9 @@
     </div> <!-- /container -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/js/bootstrap-datepicker.min.js"></script>
     <script type="text/javascript">
-      $('form').submit(function() {
+      $('.form').submit(function() {
         var form = $(this);
         var form_data = '';
         var items_selected = 0;
@@ -114,6 +122,7 @@
         }
         return false;
       }); 
+      $("#date").datepicker();
     </script>
 
   </body>
