Updated datepicker popup orientation, will now always show correctly below the datepicker, usefull for cases when there are no races on given date

--- a/templates/racedaycourse.html
+++ b/templates/racedaycourse.html
@@ -122,7 +122,7 @@
         }
         return false;
       }); 
-      $("#date").datepicker();
+      $("#date").datepicker({orientation:'top'});
     </script>
 
   </body>
