--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -58,19 +58,19 @@
         <tbody>
           {% for tipster in tipsters %}
           <tr>
-            <td>tipster.Name</td>
-            <td>tipster.TipsterScore</td>
-            <td>tipster.NumberWinners</td>
-            <td>tipster.Seconds</td>
-            <td>tipster.Thirds</td>
-            <td>tipster.Fourths</td>
-            <td>tipster.TotalRaces</td>
-            <td>tipster.WinStrikeRate</td>
-            <td>tipster.NumberFavorites</td>
-            <td>tipster.PerformanceSequence</td>
-            <td>tipster.MaxLosingStreak</td>
-            <td>tipster.MinWinningStreak</td>
-            <td>tipster.Last10</td>
+            <td>{{tipster.Name}}</td>
+            <td>{{tipster.TipsterScore}}</td>
+            <td>{{tipster.NumberWinners}}</td>
+            <td>{{tipster.Seconds}}</td>
+            <td>{{tipster.Thirds}}</td>
+            <td>{{tipster.Fourths}}</td>
+            <td>{{tipster.TotalRaces}}</td>
+            <td>{{tipster.WinStrikeRate}}</td>
+            <td>{{tipster.NumberFavorites}}</td>
+            <td>{{tipster.PerformanceSequence}}</td>
+            <td>{{tipster.MaxLosingStreak}}</td>
+            <td>{{tipster.MinWinningStreak}}</td>
+            <td>{{tipster.Last10}}</td>
           </tr>
           {% endfor %}
         </tbody>
