--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,7 +22,6 @@
   </head>
 
   <body>
-
     <div class="container">
       <div class="header clearfix">
         <nav>
@@ -35,8 +34,8 @@
         </nav>
         <h3 class="text-muted">Bettr</h3>
       </div>
-
-      <div class="wrapper">
+      </div>
+      <div class="wrapper" style="overflow:auto;">
         <table class="table table-striped">
         <thead>
           <tr>
@@ -76,13 +75,9 @@
         </tbody>
         </table>
       </div>
-
       <footer class="footer">
         <p>&copy; Company 2015</p>
       </footer>
-
-    </div> <!-- /container -->
-
   </body>
   <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="//cdn.datatables.net/1.10.8/js/jquery.dataTables.min.js"></script>
