--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,89 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Bettr</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/custom.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
+{% extends "base.html" %}
+{% block body %}
     <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="/show">Show</a></li>
-            <li role="presentation"><a href="/racedaycourse">Race Day</a></li>
-            <li role="presentation"><a href="/logout">Logout</a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">Bettr</h3>
-      </div>
-      </div>
-      <div class="wrapper" style="overflow:auto;">
+        <div class="header clearfix">
+            <nav>
+                <ul class="nav nav-pills pull-right">
+                    <li role="presentation" class="active"><a href="#">Home</a></li>
+                    <li role="presentation"><a href="/show">Show</a></li>
+                    <li role="presentation"><a href="/racedaycourse">Race Day</a></li>
+                    <li role="presentation"><a href="/logout">Logout</a></li>
+                </ul>
+            </nav>
+            <h3 class="text-muted">Bettr</h3>
+        </div>
+    </div>
+    <div class="wrapper" style="overflow:auto;">
         <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Tipster Score</th>
-            <th># of Win</th>
-            <th># of 2nd</th>
-            <th># of 3rd</th>
-            <th># of 4th</th>
-            <th>Total Races</th>
-            <th>WinStrike %</th>
-            <th># of Favs</th>
-            <th>Performance Sequence</th>
-            <th>Max Losing Streak</th>
-            <th>Min Winning Streak</th>
-            <th>Last 10</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for tipster in tipsters %}
-          <tr>
-            <td>{{tipster.Name}}</td>
-            <td>{{tipster.TipsterScore}}</td>
-            <td>{{tipster.NumberWinners}}</td>
-            <td>{{tipster.Seconds}}</td>
-            <td>{{tipster.Thirds}}</td>
-            <td>{{tipster.Fourths}}</td>
-            <td>{{tipster.TotalRaces}}</td>
-            <td>{{tipster.WinStrikeRate}}</td>
-            <td>{{tipster.NumberFavorites}}</td>
-            <td>{{tipster.PerformanceSequence}}</td>
-            <td>{{tipster.MaxLosingStreak}}</td>
-            <td>{{tipster.MinWinningStreak}}</td>
-            <td>{{tipster.Last10}}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Tipster Score</th>
+                <th># of Win</th>
+                <th># of 2nd</th>
+                <th># of 3rd</th>
+                <th># of 4th</th>
+                <th>Total Races</th>
+                <th>WinStrike %</th>
+                <th># of Favs</th>
+                <th>Performance Sequence</th>
+                <th>Max Losing Streak</th>
+                <th>Min Winning Streak</th>
+                <th>Last 10</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for tipster in tipsters %}
+                <tr>
+                    <td>{{ tipster.Name }}</td>
+                    <td>{{ tipster.TipsterScore }}</td>
+                    <td>{{ tipster.NumberWinners }}</td>
+                    <td>{{ tipster.Seconds }}</td>
+                    <td>{{ tipster.Thirds }}</td>
+                    <td>{{ tipster.Fourths }}</td>
+                    <td>{{ tipster.TotalRaces }}</td>
+                    <td>{{ tipster.WinStrikeRate }}</td>
+                    <td>{{ tipster.NumberFavorites }}</td>
+                    <td>{{ tipster.PerformanceSequence }}</td>
+                    <td>{{ tipster.MaxLosingStreak }}</td>
+                    <td>{{ tipster.MinWinningStreak }}</td>
+                    <td>{{ tipster.Last10 }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
         </table>
-      </div>
-      <footer class="footer">
-        <p>&copy; Company 2015</p>
-      </footer>
-  </body>
-  <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script type="text/javascript" src="//cdn.datatables.net/1.10.8/js/jquery.dataTables.min.js"></script>
-  <script type="text/javascript">
-  $(document).ready(function(){
-    $('#tipstersTable').DataTable();
-  });
-  </script>
-</html>
+    </div>
+{% endblock %}
