--- a/templates/racedaycourse.html
+++ b/templates/racedaycourse.html
@@ -1,122 +1,121 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Bettr</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/css/custom.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/css/bootstrap-datepicker.min.css">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-    </head>
-
-    <body>
-
-      <div class="container">
+{% extends "base.html" %}
+{% block head_extra %}
+<link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/css/bootstrap-datepicker.min.css">
+{% endblock %}
+{% block body %}
+    <div class="container">
         <div class="header clearfix">
-          <nav>
-            <ul class="nav nav-pills pull-right">
-              <li role="presentation"><a href="/">Home</a></li>
-              <li role="presentation"><a href="/show">Show</a></li>
-              <li role="presentation" class="active"><a href="/racedaycourse">Race Day</a></li>
-              <li role="presentation"><a href="/logout">Logout</a></li>
-            </ul>
-          </nav>
-          <h3 class="text-muted">Bettr</h3>
+            <nav>
+                <ul class="nav nav-pills pull-right">
+                    <li role="presentation"><a href="/">Home</a></li>
+                    <li role="presentation"><a href="/show">Show</a></li>
+                    <li role="presentation" class="active"><a href="/racedaycourse">Race Day</a></li>
+                    <li role="presentation"><a href="/logout">Logout</a></li>
+                </ul>
+            </nav>
+            <h3 class="text-muted">Bettr</h3>
         </div>
 
-        <h1>Welcome {{user.Name}}</h1>
+        <h1>Welcome {{ user.Name }}</h1>
 
         <div class="container-fluid">
-          <div class="row">
-          {%for race in races%}
-          <form method="POST" action="/updateselection" class="form" id="{{race.ID}}">
-          <h2>Race:{{race.RaceName}}</h2>
-          <h3>Race Date: {{race.RaceDate.strftime("%d %B, %Y")}} | Race Course: {{race.RaceCourseCode}}</h3>
-          <table class="table table-striped race-table">
-            <thead>
-              <td>Runner</td>
-              <td class="wid15">First</td>
-              <td class="wid15">Second</td>
-              <td class="wid15">Third</td>
-              <td class="wid15">Fourth</td>
-            </thead>
-            <tbody>
-              {%for runner in range(1,race.RaceNumber+1) %}
-              <tr>
-                <td>{{runner}}</td>
-                <td><input type="radio" name="race_first" value="{{runner}}" {%if race.RaceCourseCode in selections and loop.index == selections[race.RaceCourseCode][0] %}checked="checked"{%endif%}/></td>
-                <td><input type="radio" name="race_second" value="{{runner}}" {%if race.RaceCourseCode in selections and loop.index == selections[race.RaceCourseCode][1] %}checked="checked"{%endif%}/></td>
-                <td><input type="radio" name="race_third" value="{{runner}}" {%if race.RaceCourseCode in selections and loop.index == selections[race.RaceCourseCode][2] %}checked="checked"{%endif%}/></td>
-                <td><input type="radio" name="race_fourth" value="{{runner}}" {%if race.RaceCourseCode in selections and loop.index == selections[race.RaceCourseCode][3] %}checked="checked"{%endif%}/></td>
-              </tr>
-              {%endfor%}
-            </tbody>
-          </table>
-          <input type="hidden" name="race_id" value="{{race.ID}}" data-raceid="{{race.ID}}" data-utctimestamp="{{race.UTCRaceTime}}"/>
-          <button class="saveButton">Save</button>
-          </form>
-          {%endfor%}
-        </div>
-      </div>
+            <div class="row">
+              {% for race in races %}
+                  <form method="POST" action="/updateselection" class="form" id="{{ race.ID }}">
+                      <h2>Race:{{ race.RaceName }}</h2>
 
-      <footer class="footer">
-        <p>&copy; Company 2015</p>
-      </footer>
+                      <h3>Race Date: {{ race.RaceDate.strftime("%d %B, %Y") }} | Race
+                          Course: {{ race.RaceCourseCode }}</h3>
+                      <table class="table table-striped race-table">
+                          <thead>
+                          <td>Runner</td>
+                          <td class="wid15">First</td>
+                          <td class="wid15">Second</td>
+                          <td class="wid15">Third</td>
+                          <td class="wid15">Fourth</td>
+                          </thead>
+                          <tbody>
+                          {% for runner in range(1,race.RaceNumber+1) %}
+                              <tr>
+                                  <td>{{ runner }}</td>
+                                  <td><input type="radio" name="race_first" value="{{ runner }}"
+                                             {% if race.RaceCourseCode in selections and loop.index == selections[race.RaceCourseCode][0] %}checked="checked"{% endif %}/>
+                                  </td>
+                                  <td><input type="radio" name="race_second" value="{{ runner }}"
+                                             {% if race.RaceCourseCode in selections and loop.index == selections[race.RaceCourseCode][1] %}checked="checked"{% endif %}/>
+                                  </td>
+                                  <td><input type="radio" name="race_third" value="{{ runner }}"
+                                             {% if race.RaceCourseCode in selections and loop.index == selections[race.RaceCourseCode][2] %}checked="checked"{% endif %}/>
+                                  </td>
+                                  <td><input type="radio" name="race_fourth" value="{{ runner }}"
+                                             {% if race.RaceCourseCode in selections and loop.index == selections[race.RaceCourseCode][3] %}checked="checked"{% endif %}/>
+                                  </td>
+                              </tr>
+                          {% endfor %}
+                          </tbody>
+                      </table>
+                      <input type="hidden" name="race_id" value="{{ race.ID }}" data-raceid="{{ race.ID }}"
+                             data-utctimestamp="{{ race.UTCRaceTime }}"/>
+                      <button class="saveButton">Save</button>
+                  </form>
+              {% endfor %}
+            </div>
+        </div>
 
     </div> <!-- /container -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/js/bootstrap-datepicker.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/js/bootstrap-datepicker.min.js"></script>
     <script type="text/javascript">
-      $('.form').submit(function() {
-        var form = $(this);
-        var form_data = '';
-        var items_selected = 0;
-        $(form).find('input:radio').each(function () {
-         if ($(this).prop('checked')){
-          items_selected += 1;
-          form_data += "<br><strong>"+$(this).attr('name').substring(5)+"</strong>: " +$(this).val();
-            };
-          });
+        $('.form').submit(function () {
+            var form = $(this);
+            var form_data = '';
+            var items_selected = 0;
+            $(form).find('input:radio').each(function () {
+                if ($(this).prop('checked')) {
+                    items_selected += 1;
+                    form_data += "<br><strong>" + $(this).attr('name').substring(5) + "</strong>: " + $(this).val();
+                }
+                ;
+            });
 
-        // check has the user made 4 selections
-        if (items_selected == 4){
+            // check has the user made 4 selections
+            if (items_selected == 4) {
 
-          // get the timestamp
-          var utc_timestamp = $(this).find('[name=race_id]').attr('data-utctimestamp');
-          swal({   title: "Are you sure?",   text: "Do you want to submit this selection: " + form_data + "<br><br>The selection for the has to be submitted before the race start time in order to be valid. <br>UTC time of the race is: <br><strong>"+ utc_timestamp+"</strong>", html: true,  type: "info",   showCancelButton: true,   confirmButtonColor: "green",   confirmButtonText: "Submit!",   closeOnConfirm: false }, function(){  $.ajax({
+                // get the timestamp
+                var utc_timestamp = $(this).find('[name=race_id]').attr('data-utctimestamp');
+                swal({
+                    title: "Are you sure?",
+                    text: "Do you want to submit this selection: " + form_data + "<br><br>The selection for the has to be submitted before the race start time in order to be valid. <br>UTC time of the race is: <br><strong>" + utc_timestamp + "</strong>",
+                    html: true,
+                    type: "info",
+                    showCancelButton: true,
+                    confirmButtonColor: "green",
+                    confirmButtonText: "Submit!",
+                    closeOnConfirm: false
+                }, function () {
+                    $.ajax({
 
-             data: form.serialize(),
-             type: 'POST',
-             url: '/updateselection',
-             success: function(response) {
-              swal('Saved!','Your selection has been updated!', 'success');
-               }, 
-               error: function (xhr, status) {  
-                swal('Error', 'Unknown error' + status, 'error'); 
-              } 
-            });  
-          });
-        } else {
-          swal('error', 'You need to make all four selections in order for your submission to be valid!', 'error');
-        }
-        return false;
-      }); 
+                        data: form.serialize(),
+                        type: 'POST',
+                        url: '/updateselection',
+                        success: function (response) {
+                            swal('Saved!', 'Your selection has been updated!', 'success');
+                        },
+                        error: function (xhr, status) {
+                            swal('Error', 'Unknown error' + status, 'error');
+                        }
+                    });
+                });
+            } else {
+                swal('error', 'You need to make all four selections in order for your submission to be valid!', 'error');
+            }
+            return false;
+        });
     </script>
+{% endblock %}
 
-  </body>
-  </html>
