--- a/templates/show.html
+++ b/templates/show.html
@@ -1,91 +1,66 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Bettr</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/css/custom.css" rel="stylesheet">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-    </head>
-
-    <body>
-
-      <div class="container">
+{% extends "base.html" %}
+{% block body %}
+    <div class="container">
         <div class="header clearfix">
-          <nav>
-            <ul class="nav nav-pills pull-right">
-              <li role="presentation"><a href="/">Home</a></li>
-              <li role="presentation" class="active"><a href="/show">Show</a></li>
-              <li role="presentation"><a href="/racedaycourse">Race Day</a></li>
-              <li role="presentation"><a href="/logout">Logout</a></li>
-            </ul>
-          </nav>
-          <h3 class="text-muted">Bettr</h3>
+            <nav>
+                <ul class="nav nav-pills pull-right">
+                    <li role="presentation"><a href="/">Home</a></li>
+                    <li role="presentation" class="active"><a href="/show">Show</a></li>
+                    <li role="presentation"><a href="/racedaycourse">Race Day</a></li>
+                    <li role="presentation"><a href="/logout">Logout</a></li>
+                </ul>
+            </nav>
+            <h3 class="text-muted">Bettr</h3>
         </div>
 
-        <h1>Welcome {{user.Name}}</h1>
+        <h1>Welcome {{ user.Name }}</h1>
 
         <div class="container-fluid">
-          <div class="row">
-           <table class="table table-striped">
-            <thead>
-              <td>Race Date</td>
-              <td>Racecourse Code</td>
-              <td>Race Number</td>
-              <td>Result</td>
-              <td>Race Number</td>
-              <td>Win Odds</td>
-              <td>Favorite Position</td>
-              <td>Favorite Odds</td>
-              <td># of Runners</td>
-              <td>Selection 1st</td>
-              <td>Selection 2nd</td>
-              <td>Selection 3rd</td>
-              <td>Selection 4th</td>
-              <td>Submitted at</td>
-            </thead>
-            <tbody>
-              {%for sel in selections%}
-              <tr>
-                <td>{{sel[1]}}.strftime('%d %B, %Y')}}</td>
-                <td>{{sel[2]}}</td>
-                <td>{{sel[3]}}</td>
-                <td>{{sel[4]}}</td>
-                <td>{{sel[5]}}</td>
-                <td>{{sel[6]}}</td>
-                <td>{{sel[7]}}</td>
-                <td>{{sel[8]}}</td>
-                <td>{{sel.Selections.First}}</td>
-                <td>{{sel.Selections.Second}}</td>
-                <td>{{sel.Selections.Third}}</td>
-                <td>{{sel.Selections.Fourth}}</td>
-                <td>{{s.SubmittedAt}}</td>
-              </tr>
-              {%endfor%}
-            </tbody>
-          </table>
+            <div class="row">
+                <table class="table table-striped">
+                    <thead>
+                    <td>Race Date</td>
+                    <td>Racecourse Code</td>
+                    <td>Race Number</td>
+                    <td>Result</td>
+                    <td>Race Number</td>
+                    <td>Win Odds</td>
+                    <td>Favorite Position</td>
+                    <td>Favorite Odds</td>
+                    <td># of Runners</td>
+                    <td>Selection 1st</td>
+                    <td>Selection 2nd</td>
+                    <td>Selection 3rd</td>
+                    <td>Selection 4th</td>
+                    <td>Submitted at</td>
+                    </thead>
+                    <tbody>
+                    {% for sel in selections %}
+                        <tr>
+                            <td>{{ sel[1] }}.strftime('%d %B, %Y')}}</td>
+                            <td>{{ sel[2] }}</td>
+                            <td>{{ sel[3] }}</td>
+                            <td>{{ sel[4] }}</td>
+                            <td>{{ sel[5] }}</td>
+                            <td>{{ sel[6] }}</td>
+                            <td>{{ sel[7] }}</td>
+                            <td>{{ sel[8] }}</td>
+                            <td>{{ sel.Selections.First }}</td>
+                            <td>{{ sel.Selections.Second }}</td>
+                            <td>{{ sel.Selections.Third }}</td>
+                            <td>{{ sel.Selections.Fourth }}</td>
+                            <td>{{ s.SubmittedAt }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
-      </div>
 
-      <footer class="footer">
-        <p>&copy; Company 2015</p>
-      </footer>
+        <footer class="footer">
+            <p>&copy; Company 2015</p>
+        </footer>
 
     </div> <!-- /container -->
 
-  </body>
-  </html>
+{% endblock %}
