Added tables with sortable headers

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
 </body>
 <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="//cdn.datatables.net/1.10.8/js/jquery.dataTables.min.js"></script>
+<script src="/static/theme/jquery.tablesorter.min.js"></script>
 <script src="/static/theme/toolkit.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
